---------------------------------------------------------------------------------------------------
Version: 0.5.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.5.0
Date: 2025-04-12
  Info:
    - This is a breaking update, previous saves are not compatible.
  Changes:
    - Quality is no longer renamed to 'degradation'.
    - The new quality levels are implemented as new prototypes rather than overriding the existing quality levels, with the exception of 'Nominal' which is still a rename of 'Normal'. This means loading a save with uncommon and greater items will keep those items.
    - Reduced the degradation chance from 80% to 60%.
    - Renamed Nominal to Normal.s
    - Renamed 'Busted' to 'Broken'.
    - Reduced the quality module buff from 5X to 3X.
---------------------------------------------------------------------------------------------------
Version: 0.3.2
Date: 2025-04-03
  Info:
    - Added Space Age tag.
---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2025-03-31
  Graphics:
    - Small graphical tweak to Nominal quality icon.
    - Fixed that Busted was not hidden as intended.
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2025-03-31
  Changes:
    - Decreased the base degradation chance from 90% to 80%.
---------------------------------------------------------------------------------------------------
Version: 0.2.3
Date: 2025-03-31
  Changes:
    - Added a bonus of 10% to all machine crafting speeds.
---------------------------------------------------------------------------------------------------
Version: 0.2.2
Date: 2025-03-30
  Changes:
    - 'Beta' tag added to title.
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2025-03-30
  Changes: