@@ -4,3 +4,4 @@ require("prototypes.override-final.meltdown")
 require("prototypes.override-final.module")
 require("prototypes.override-final.porting")
 require("prototypes.override-final.recipe")
+require("prototypes.override-final.technology")
