@@ -3,9 +3,14 @@
     "author": "thesixthroc",
     "version": "0.5.3",
     "title": "Inverted Quality",
-    "description": "Quality now consists of negative tiers (positive tiers are removed). Crafting items has a 60% chance to reduce their quality by one tier.\n\nTo cope with the new gameplay, the new Downgrade Port allows high-quality items to be used in low-quality recipes, and the Meltdown Facility allows the melting down of low-quality items back into Normal base materials.",
+    "description": "Inverts the Quality system to negative tiers (positive tiers are removed). Crafting items has a 60% chance to reduce their quality by one tier.\n\nTo cope with the new gameplay, the new Downgrade Port allows high-quality items to be used in low-quality recipes, and the Meltdown Facility allows the melting down of low-quality items back into Normal base materials.",
     "contact": "Discord: thesixthroc",
     "factorio_version": "2.0",
     "quality_required": true,
-    "dependencies": ["base >= 2.0.42", "space-age >= 2.0.42", "quality >= 2.0.42"]
+    "dependencies": [
+        "base >= 2.0.42",
+        "space-age >= 2.0.42",
+        "quality >= 2.0.42",
+        "PlanetsLib >= 1.3.1"
+    ]
 }
