@@ -1,2 +1,5 @@
+[quality-tooltip]
 beacon-effectivity=
-collection-arm-count=
+
+[description]
+quality-bonus=Degradation+100%
