@@ -1,0 +1,16 @@
+PlanetsLib.excise_effect_from_tech_tree({
+	type = "unlock-quality",
+	quality = "uncommon",
+})
+PlanetsLib.excise_effect_from_tech_tree({
+	type = "unlock-quality",
+	quality = "rare",
+})
+PlanetsLib.excise_effect_from_tech_tree({
+	type = "unlock-quality",
+	quality = "epic",
+})
+PlanetsLib.excise_effect_from_tech_tree({
+	type = "unlock-quality",
+	quality = "legendary",
+})
